guestbook-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guestbook
  labels:
    app: guestbook
spec:
  selector:
    matchLabels:
      app: guestbook
  replicas: 3
  template:
    metadata:
      labels:
        app: guestbook
    spec:
      containers:
      - name: guestbook
        image: linsun/guestbook
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - name: http
          containerPort: 3000
