animatedbook-destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destination-rule-animatedbook
spec:
  host: animatedbook
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
