books-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service-books
spec:
  hosts:
    - "*"
  gateways:
    - books-gateway
  http:
  - match:
    - port: 80
    route:
    - destination:
        host: guestbook
  - match:
    - port: 8080
    route:
    - destination:
        host: animatedbook.books.svc.cluster.local
